# vortex

./: .gitignore
gemini/: .Dockerfile.core.tmp  .editorconfig  .gitignore  .pre-commit-config.yaml  1#  Cargo.toml  LICENSE  README.md  Tiltfile  agent.md  docker-compose.yml  rules.md
gemini/.agent/workflows/: start-vortex.md
gemini/.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
gemini/.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
gemini/.github/workflows/: ci.yml  security.yml
gemini/crates/vortex-config/: Cargo.toml
gemini/crates/vortex-config/src/: lib.rs
gemini/crates/vortex-core/: Cargo.toml
gemini/crates/vortex-core/src/: api.rs  arbiter.rs  authz.rs  config.rs  db.rs  entities.rs  error.rs  graph.rs  graph_repo.rs  ipc.rs  lib.rs  main.rs  run_repo.rs  scheduler.rs  server.rs  settings.rs  shm.rs  supervisor.rs  tenant.rs  tenant_repo.rs
gemini/crates/vortex-core/src/salsa/: db.rs  mod.rs
gemini/crates/vortex-core/tests/: integration.rs
gemini/crates/vortex-core/worker/: worker.py
gemini/crates/vortex-protocol/: Cargo.toml  build.rs
gemini/crates/vortex-protocol/src/: lib.rs
gemini/crates/vortex-registry/: Cargo.toml
gemini/crates/vortex-registry/src/: lib.rs  lockfile.rs  manifest.rs  scanner.rs  solver.rs  venv.rs
gemini/crates/vortex-telemetry/: Cargo.toml
gemini/crates/vortex-telemetry/src/: lib.rs  logging.rs  metrics.rs  tracing_setup.rs
gemini/docker/core/: Dockerfile
gemini/docker/ui/: Dockerfile  nginx.conf
gemini/docker/worker/: Dockerfile
gemini/docs/: DEPLOYMENT.md  design_system.md  implementation_tasks.md
gemini/docs/architecture/: architecture_audit_report.md  design_patterns.md  feature_implementation_plan.md  project_structure.md
gemini/docs/design/: 01_core_engine_sdd.md  02_frontend_ui_sdd.md  03_compute_fabric_sdd.md  04_registry_sdd.md  05_revolutionary_ui.md
gemini/docs/research/: Generative AI Streaming Architecture Design.md  Revolutionizing ComfyUI Architecture.md  competitive_analysis.md
gemini/docs/specs/: 00_master_srs.md  01_core_engine_srs.md  02_frontend_ui_srs.md  03_compute_fabric_srs.md  04_registry_srs.md  05_ui_screens_spec.md  06_enterprise_infrastructure_srs.md  06_environment_config_spec.md  07_data_flow_spec.md  08_workspace_tools_spec.md  vortex_ui_ux_specification_iso_9241_aligned_engineer_ready.md
gemini/k8s/base/: configmap.yaml  kustomization.yaml  limitrange.yaml  namespace.yaml  resourcequota.yaml
gemini/k8s/base/core/: configmap.yaml  deployment.yaml  pvc.yaml  service.yaml
gemini/k8s/base/db/: kustomization.yaml  milvus.yaml  postgres.yaml
gemini/k8s/base/security/: keycloak.yaml  kustomization.yaml  spicedb.yaml  vault.yaml
gemini/k8s/base/storage/: data-pvc.yaml  models-pvc.yaml
gemini/k8s/base/ui/: deployment.yaml  service.yaml
gemini/k8s/base/worker/: deployment.yaml  pdb.yaml  pvc.yaml
gemini/k8s/overlays/live/: kustomization.yaml
gemini/k8s/overlays/sandbox/: kustomization.yaml
gemini/proto/: control.proto  graph.proto  worker.proto
gemini/tasks/: TASKS.md  phase0_setup.md  phase1_protocol.md  phase2_core.md  phase3_worker.md  phase4_ui.md  phase5_registry.md  phase6_integration.md
gemini/tests/: tilt-verify.spec.ts
gemini/tests/integration/: check_infra.sh
gemini/ui/: nginx.conf  package.json  playwright.config.ts  svelte.config.js  tsconfig.json  vite.config.ts
gemini/ui/src/: app.css  app.html
gemini/ui/src/lib/components/: Blade.svelte  Rack.svelte  SignalBus.svelte
gemini/ui/src/lib/components/canvas/: CinematicBackground.svelte
gemini/ui/src/lib/stores/: bus.svelte.ts  execution.svelte.ts  rack.svelte.ts
gemini/ui/src/lib/styles/: reset.css  tokens.css
gemini/ui/src/routes/: +layout.svelte  +page.svelte
gemini/ui/tests/: infrastructure.spec.ts
gemini/worker/: pyproject.toml  requirements.live.txt  requirements.sandbox.txt  requirements.txt
gemini/worker/tests/: conftest.py  test_bridge.py
gemini/worker/vortex_worker/: __init__.py  __main__.py  bridge.py  config.py  executor.py  ipc.py  main.py  model_loader.py  sandbox.py  shm.py
gpt/docs/: vortex-srs.md
