[workspace]
resolver = "2"
members = [
    "crates/vortex-core",
    "crates/vortex-protocol",
    "crates/vortex-registry",
    "crates/vortex-telemetry",
    "crates/vortex-config",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["SOMATECH <dev@somatech.lat>"]
license = "Apache-2.0"
repository = "https://github.com/somatechlat/vortex"

[workspace.dependencies]
# Async Runtime
tokio = { version = "1.35", features = ["full", "signal"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
prost = "0.12"
prost-types = "0.12"

# Hashing
sha2 = "0.10"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite"] }

# IPC
nix = { version = "0.27", features = ["socket", "mman", "signal", "process", "fs"] }

# Shared Memory  
memmap2 = "0.9"

# Concurrency
dashmap = "5.5"
parking_lot = "0.12"

# Logging & Telemetry
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
opentelemetry = "0.21"
opentelemetry-otlp = "0.14"

# HTTP Server
axum = { version = "0.7", features = ["ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Error Handling
thiserror = "1.0"
anyhow = "1.0"

# UUID
uuid = { version = "1.6", features = ["v4", "serde"] }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
