[workspace]
members = [
    "crates/vortex-core",
    "crates/vortex-config",
    "crates/vortex-registry",
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"
authors = ["SomaTech <engineering@somatech.lat>"]
license = "MIT"
description = "VORTEX High-Performance AI Workflow Engine"
[workspace.dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
salsa = "0.17"
nix = { version = "0.27", features = ["fs", "socket", "mman"] }
memmap2 = "0.9"
dashmap = "5.5"
parking_lot = "0.12"
axum = { version = "0.7", features = ["ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
thiserror = "1.0"
anyhow = "1.0"
uuid = { version = "1.6", features = ["v4", "serde"] }
prost = "0.12"
prost-types = "0.12"
opentelemetry = "0.21"
opentelemetry-otlp = "0.14"

