[package]
name = "vortex-config"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Enterprise-grade centralized configuration for VORTEX-GEN 3.0"

[dependencies]
# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
toml = "0.8"

# Error Handling
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3.9"
