[package]
name = "vortex-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Core Engine for VORTEX-GEN 3.0 - Centaur Architecture"

[dependencies]
vortex-protocol = { path = "../vortex-protocol" }
vortex-telemetry = { path = "../vortex-telemetry" }

# Async Runtime
tokio.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Hashing
sha2.workspace = true

# Database
sqlx.workspace = true

# IPC - Unix Domain Sockets
nix.workspace = true

# Shared Memory
memmap2.workspace = true

# Concurrency
dashmap.workspace = true
parking_lot.workspace = true

# HTTP Server
axum.workspace = true
tower.workspace = true
tower-http.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# Error Handling
thiserror.workspace = true
anyhow.workspace = true

# UUID Generation
uuid.workspace = true

[dev-dependencies]
criterion = "0.5"
tempfile = "3.9"

[lib]
crate-type = ["rlib"]
