[package]
name = "vortex-telemetry"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Observability and telemetry for VORTEX"

[dependencies]
# Tracing
tracing.workspace = true
tracing-subscriber.workspace = true

# OpenTelemetry
opentelemetry.workspace = true
opentelemetry-otlp.workspace = true

# Metrics
prometheus = "0.13"

# Serialization
serde.workspace = true
serde_json.workspace = true
